/*
   Project JaCaMo for MAPC 2020
*/

defaultTasks 'run'

apply plugin: 'java'

version '0.1'
group   'org.jacamo.mapc'

sourceCompatibility = 1.13
targetCompatibility = 1.13

repositories {
    mavenCentral()

    maven { url "http://jacamo.sourceforge.net/maven2" }
    maven { url "https://raw.github.com/jacamo-lang/mvn-repo/master" }
    flatDir {
       dirs 'libs'
    }
}

dependencies {
	implementation 'org.jacamo:jacamo:0.8'
	implementation 'org.jason-lang:jason:2.4'
    implementation name: 'eismassim-4.2-jar-with-dependencies'
    implementation name: 'server-2020-1.0-jar-with-dependencies'

	testCompile group: 'junit', name: 'junit', version: '4.12'
}

sourceSets {
    main {
        java {
            srcDir 'src/env'
            srcDir 'src/agt'
            srcDir 'src/org'
            srcDir 'src/java'
        }
        resources {
            srcDir 'src/resources'
        }
    }
}

if (JavaVersion.current() < project.targetCompatibility) {
    println "The java version used ${JavaVersion.current()}, it is expected version ${project.targetCompatibility}."
}

task run (type: JavaExec, dependsOn: 'classes') {
    group      ' MAPC'
    description 'run teams'
    doFirst {
        mkdir 'log'
    }
    standardInput = System.in
    main 'runMAPC2020.RunTeam'
    args = ['src/jcm/randomwalk_X_donothing.jcm','browser']
    classpath sourceSets.main.runtimeClasspath
}


/*task run (type: JavaExec, dependsOn: 'classes') {
    group      ' MAPC'
    description 'runs the team1'
    doFirst {
        mkdir 'log'
    }
    main 'jacamo.infra.JaCaMoLauncher'
    args 'src/jcm/randomwalk_X_donothing.jcm'
    classpath sourceSets.main.runtimeClasspath
}*/

task fixTab {
    ant.fixcrlf(eol: 'lf',  includes: '**/*.txt,**/*.bat, **/*.adoc', srcdir: '.')
    ant.fixcrlf(tab: 'remove', tablength: '4', javafiles: 'true', includes: '**/*.java,**/*.xml', srcdir: 'src')
    ant.fixcrlf(tab: 'remove', tablength: '4', javafiles: 'true', includes: '**/*.java,**/*.xml,**/*.asl,**/*.jcm', srcdir: '.')
    //ant.fixcrlf(tab: 'remove', tablength: '4', javafiles: 'true', includes: '**/*.java,**/*.xml,**/*.asl,**/*.jcm,**/*.txt', srcdir: 'doc')
}


clean {
    delete 'bin'
    delete 'build'
    delete 'log'
    delete 'logs'
    delete 'replays'
}
